--- a/.github/workflows/ch4_google_cloud_credential_service_account.yml
+++ b/.github/workflows/ch4_google_cloud_credential_service_account.yml
@@ -22,7 +22,7 @@
         uses: google-github-actions/upload-cloud-storage@v1
         with:
           path: ./build.txt
-          destination: githubaction-test-01/
+          destination: githubaction-test-01-marcel/
           process_gcloudignore: false
       - name: Notice when a build finishes
         if: always()
